fix algorithm for best dynamics

--- a/main.tex
+++ b/main.tex
@@ -423,10 +423,10 @@ presents the best response memory one strategy to a group of opponents.
         S_q =
         \left\{\bar{p} \in \mathbb{R} ^ 4 \left |
             \begin{array}{c}
-                \bar{p}_k \in \{0, 1\} \text{ or } F(\bar{p}) = 0\\
+                \bar{p}_k \in \{0, 1\} \text{ for all } k \in \{1, 2, 3, 4 \} \text{ or } F(\bar{p}) = 0\\
                 \prod\limits_{i=1} ^ N Q_{D}^{(i)} \neq 0
             \end{array}
-            \text{ for all } k \in \{1, 2, 3, 4 \} \right.
+             \right.
         \right\}
     \]
 
