--- a/main.tex
+++ b/main.tex
@@ -42,12 +42,17 @@
 \maketitle
 
 \begin{abstract}
-    % This manuscript builds upon a framework provided in 1989 to study best
-    % responses in the well known memory one strategies of the Iterated Prisoner's
-    % Dilemma. The aim of this work is to construct a compact way of identifying
-    % best responses of short memory strategies and to show their limitations in
-    % multi-opponent interactions. A number of theoretic results are presented.
-    %TODO: Expand when we get results
+    Memory one strategies are a set of iterated prisoner’s dilemma strategies
+    that have been praised
+    for their mathematical tractability and robustness. This manuscript explores
+    the \textit{best response} memory one strategies and proves that they can be
+    studied as a multidimensional optimisation promblem. Though extortionate memory
+    one strategies have gained much attetion, we prove that best response memory
+    one strategies do not behave in an extortionate way, and for 
+    memory one strategies to be evolutionary robust they need to be able to behave
+    in a forgiving way. We also provide evidence that memory one strategies do suffer
+    from the limitation of their memory and can be out performed in multi interactions
+    by longer memory strategies.
 \end{abstract}
 
 \section{Introduction}\label{section:introduction}
@@ -110,19 +115,19 @@ opponent, more specifically, it is a strategy that considers only the previous
 move of the opponent. These type of strategies are called
 \textit{reactive}~\cite{Nowak1989} and are a subset of so called \textit{memory
 one} strategies. Memory one strategies similarly only consider the previous
-turn, however, they incorporate both players' recent moves. As the name suggests
-memory one strategies have a memory of size 1.
+turn, however, they incorporate both players' recent moves.
 
-Several successful reactive strategies and memory one are found in the
+Several successful reactive and memory one strategies are found in the
 literature, such as Generous Tit For Tat~\cite{Nowak1990} and
 Pavlov~\cite{Nowak1993}. However, memory one strategies generated a small shock
 in the game theoretic community (\cite{Stewart2012} stated that ``Press and
 Dyson have fundamentally changed the viewpoint on the Prisoner's Dilemma'') when
-a cernent set of memory one strategies was introduced in~\cite{Press2012}. These
+a curtain set of memory one strategies was introduced in~\cite{Press2012}. These
 strategies are called zero determinate (ZD) and they chose their actions so that
 a linear relationship is forced between their score and that of the opponent. ZD
 strategies are indeed mathematically unique and are proven to be robust in pairwise
-interactions.
+interactions. Their true effectiveness in tournament interactions and evolutionary
+dynamics has been questioned by several works.
 
 The purpose of this work is to consider a given memory one strategy in a similar
 fashion to~\cite{Press2012}, however whilst~\cite{Press2012} found a way for a
@@ -151,7 +156,7 @@ concerned with only the outcome of a single turn then there are four possible
 strategy can be denoted by the probability vector of cooperating after each of
 these states; \(p=(p_1, p_2, p_3, p_4) \in \R_{[0,1]} ^ 4\). In an IPD match two
 memory one strategies are moving from state to state, at each turn with a given
-probability. This exact behaviour can be modelled as a stochastic process, and
+probability. This exact behaviour can be modeled as a stochastic process, and
 more specifically as a Markov chain (Figure~\ref{fig:markov_chain}). The
 corresponding transition matrix \(M\) of Figure~\ref{fig:markov_chain} is given
 below,
@@ -228,12 +233,13 @@ first work that has been done on the form of \(u_q(p)\).
 The proof of Theorem~\ref{theorem:quadratic_form_u} is given in Appendix. %TODO write proof
 
 Numerical simulations have been carried out to validate the formulation of
-\(u_q(p)\) as a quadratic ratio, a data set is available at. Two examples are
-graphically represented in Figure~\ref{fig:analytical_simulated} and show that
-the formulation successfully captures the simulated behaviour. The simulated
-utility, which is denoted as \(U_q(p)\), has been calculated
-using~\cite{axelrodproject}, an open source research framework for the study of
-the IPD. The project is described in~\cite{Knight2016}.
+\(u_q(p)\) as a quadratic ratio, a data set is available at.
+Figure~\ref{fig:analytical_simulated} shows that the formulation successfully
+captures the simulated behaviour. The simulated utility, which is denoted as
+\(U_q(p)\), has been calculated using~\cite{axelrodproject} an open source
+research framework for the study of the IPD. The project is described
+in~\cite{Knight2016}. All of the aforementioned simulated results have been
+estimated using~\cite{axelrodproject}.
 
 \begin{figure}[!htbp]
     \begin{center}
@@ -272,14 +278,9 @@ Theorem~\ref{theorem:tournament_utility}.
     \end{equation}
 \end{theorem}
 
-As an illustration, Theorem~\ref{theorem:tournament_utility} is used to
-calculate the theoretical payoffs of several memory one strategies against a set
-of 10 opponents. The opponents used are the memory one strategies for the
-tournament conducted in~\cite{Stewart2012}; the names of the strategic rules are
-given by Table~\ref{table:list_stewart_plotkin}.
-Figure~\ref{fig:stewart_plotkin_results} provides evidence that the values of
-\(\frac{1}{N} \sum\limits_{i=1} ^ {N} u_{q ^{(i)}} (p)\) and \(\frac{1}{N}
-\sum\limits_{i=1} ^ {N} U_{q ^{(i)}} (p)\) match.
+Theorem~\ref{theorem:tournament_utility} is validated against the strategies
+used in~\cite{Stewart2012}, Figure~\ref{fig:stewart_plotkin_results}.
+A list of the strategies is given by Table~\ref{table:list_stewart_plotkin}.
 
 \input{tex/stewart_plotkin_tournament_strategies_list.tex}
 
@@ -292,40 +293,37 @@ Figure~\ref{fig:stewart_plotkin_results} provides evidence that the values of
     \end{center}
 \end{figure}
 
-Note that it was explored whether the the utility against a group of strategies could be
-captured by the utility against the mean opponent. Thus, finding the best response
-to a given group of opponents correspond to finding the best response to a single
-player, the mean player formed by the probabilities of that given group. The
-hypothesis however fails, as:
+Furthermore, using the same list of strategies the 
+hypothesis the utility against a group of strategies could be
+captured by the utility against the mean opponent, thus:
 
-\begin{equation}\label{eq:tournament_hypothesis}
-    \frac{1}{N} \sum_{i=1} ^ {N} {u_q}^{(i)} (p) \neq u_{\frac {1}{N} \sum\limits_{i=1} ^ N q^{(i)}}(p).
+\begin{equation}\label{eq:condition}
+    \frac{1}{N} \sum_{i=1} ^ {N} {u_q}^{(i)} (p) = u_{\frac {1}{N} \sum\limits_{i=1} ^ N q^{(i)}}(p),
 \end{equation}
 
-which is captured by Figure~\ref{fig:hypothesis}.
+has been checked. The hypothesis fails and numerical evidence are given by
+Figure~\ref{fig:hypothesis}.
 
 \begin{figure}[!htbp]
     \begin{center}
     \includegraphics[width=.5\linewidth]{img/mean_vs_average_heatmap.pdf}
     \end{center}
-    \caption{The difference between the average utility against 10
-    opponents and the utility against the average player of these 10 opponents
-    is plotted. It is clear that the hypothesis fails for this case as the
-    absolute difference is manly positive for the example. The hypothesis fails
-    fro at least one case, thus it can not be assumed to be true.}
+    \caption{The difference between the average utility and against
+    the utility against the average player of the strategies in~\cite{Stewart2012}.
+    A positive difference indicates that the condition (\ref{eq:condition})
+    does not hold.}
     \label{fig:hypothesis}
 \end{figure}
 
-In the following section best responses are introduced and explored for the case
-of memory one strategies. Moreover, in the following sections several other
-theoretical results and presented and the advantages of analytical formulation
-of Theorem~\ref{theorem:tournament_utility} become evident.
-
+Theorem~\ref{theorem:tournament_utility} can be used to identify best
+responses in the case of memory one strategies. In the following sections several
+theoretical results are presented and the advantages of analytical formulation
+of become evident.
 
 \section{Best responses to memory one players}\label{section:best_response_mem_one}
 
-In game theory a \textit{best response} is the strategy which corresponds to the most
-favourable outcome. In this manuscript a best response memory one strategy
+A \textit{best response} is the strategy which corresponds to the most
+favourable outcome. A best response memory one strategy
 corresponds to the \(p^*\) for which \(\sum u_{q ^{(i)}} (p^*)\) for \(i \in \{1, \dots, N\}\)
 is maximized. This is considered as a multi dimensional optimisation problem
 where the decision variable is the vector \(p\), the solitary constraint is
@@ -343,7 +341,7 @@ ratios. The optimisation problem is formally given by~(\ref{eq:mo_tournament_opt
 Optimising this particular ratio of quadratic forms is not trivial. It can be
 verified empirically for the case of a single opponent that there exist at least
 one point for which the definition of concavity does not hold. There is some
-work on the optimisation on non concave ratios of of quadratic forms
+work on the optimisation on non concave ratios of quadratic forms
 \cite{Beck2009, Hongyan2014}, in these both the numerator and the denominator of
 the fractional problem were concave or that the denominator was greater than
 zero. Both assumptions fails for (\ref{eq:mo_tournament_optimisation}). These
@@ -354,46 +352,6 @@ results are established in Theorem~\ref{theorem:concavity}.
     (\ref{eq:optimisation_quadratic}), is not concave. Furthermore neither the
     numeration or the denominator of (\ref{eq:optimisation_quadratic}), are concave.
 \end{theorem}
-
-\begin{proof}
-    A function \(f(x)\) is said to be concave on an interval \([a, b]\) if, for any
-    points \(x_1\) and \(x_2 \in [a, b]\), the function \(-f(x)\) is convex on that
-    interval.
-
-    A function \(f(x)\) is convex on an interval \([a, b]\) if for any two
-    points \(x_1\) and \(x_2\) in \([a, b]\) and any \(\lambda\) where \(0 < \lambda < 1\),
-
-    \begin{equation}\label{def:convex}
-    f (\lambda x_1 + (1 - \lambda )x_2 ) \leq \lambda f (x_1 ) + (1 - \lambda )f (x_2 ).
-    \end{equation}
-
-    Let \(f\) be
-    \(u_{(\frac{1}{3}, \frac{1}{3}, \frac{1}{3}, \frac{1}{3})}\) it can be shown
-    that
-    for \(x_1 = (\frac{1}{4}, \frac{1}{2}, \frac{1}{5} , \frac{1}{2}),
-    x_2 = (\frac{8}{10}, \frac{1}{2}, \frac{9}{10} , \frac{7}{10})\) and
-    \(\lambda=\frac{1}{10}\)
-    condition (\ref{def:convex}) does not hold as: \(1.49 \geq 1.48\).
-
-    In~\cite{Anton2014} it is stated that a quadratic form will
-    be concave if and only if it's symmetric matrix is negative semi definite.
-    A matrix\(A\) is semi-negative definite if:
-
-    \begin{equation}\label{def:semi_negative}
-    |A|_i \leq 0 \text{ for } i \text{ is odd and } |A|_i \geq 0  \text{ for } i
-    \text{ is even.}
-    \end{equation}
-
-    For both \(Q\) and \(\bar{Q}\) it is exhibited that for \(i=2\) (odd):
-    % TODO What do you mean by "exhibited"?
-
-    \[|Q|_2 = - \left(q_{1} - q_{3}\right)^{2} \left(q_{2} - 5 q_{4} - 1\right)^{2},\]
-    \[|\bar{Q}|_2 =- \left(q_{1} - q_{3}\right)^{2} \left(q_{2} - q_{4} - 1\right)^{2}\]
-
-    both determinants are negative, thus the concavity condition
-    (\ref{def:semi_negative})
-    fails for both quadratic forms.
-\end{proof}
 
 The non concavity of \(u(p)\) indicates multiple local optimal points. The
 approach taken here is to introduce a compact way of constructing the candidate
@@ -416,127 +374,20 @@ presents the best response memory one strategy to a group of opponents.
     against a set of \(N\) opponents \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
     for \(q^{(i)} \in \R_{[0, 1]} ^ 4\) is established by:
 
-    \[p^* = \textnormal{argmax}(\sum\limits_{i=1} ^ N  u_q(p)), \ p \in S_q,\]
+    \[p^* = \textnormal{argmax}(\sum\limits_{i=1} ^ N  u_q(p)), \ p \in S_q.\]
 
-    where the set \(S_q\) is defined as
+    The set \(S_q\) is defined as all the possible combinations of:
 
-    \[
-        S_q =
-        \left\{\bar{p} \in \mathbb{R} ^ 4 \left |
-            \begin{array}{c}
-                \bar{p}_k \in \{0, 1\} \text{ for all } k \in \{1, 2, 3, 4 \} \text{ or } F(\bar{p}) = 0\\
-                \prod\limits_{i=1} ^ N Q_{D}^{(i)} \neq 0
-            \end{array}
-             \right.
-        \right\}
-    \]
+    \begin{itemize}
+    \item Any one, two, three, four or non of the transition probabilities of
+    \(p\) are zero,
+    \item while any one, two, three, four or non of the transition probabilities of
+    \(p\) are one,
+    \item while any one, two, three, four or non of the transition probabilities of
+    \(p\) are the roots of \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\).
+    \end{itemize}
 
-
-    where,
-    \begin{equation}\label{eq:group_derivative_numerator_condition}
-    F(p)=(\sum\limits_{i=1} ^ {N} Q_{N}^{(i)'} \prod_{\substack{j=1 \\ j \neq i}} ^ N Q_{D}^{(i)}
-     + \sum\limits_{i=1} ^ {N} Q_{D}^{(i)'} \sum_{\substack{j=1 \\ j \neq i}} ^ {N} Q_{N}^{(i)}
-    \prod_{\substack{j=1 \\ j \neq \{i, j\}}} ^ N Q_{D}^{(i)}) \times
-    \prod\limits_{i=1} ^ N Q_{D}^{(i)} - (\sum\limits_{i=1} ^ {N} Q_{D}^{(i)'}
-    \prod_{\substack{j=1 \\ j \neq i}} ^ N Q_{D}^{(i)}) \times
-    (\sum\limits_{i=1} ^ {N} Q_{N}^{(i)} \prod_{\substack{j=1 \\ j \neq i}} ^ N Q_{D}^{(i)})
-    \end{equation}
-
-    and,
-    \begin{align*}
-        Q_{N}^{(i) } & = \frac{1}{2} pQ^{(i)} p^T + c^{(i)} p + a^ {(i)}, \\
-        Q_{N}^{(i)'} & =  pQ^{(i)} + c^{(i)}, \\
-        Q_{D}^{(i) } & = \frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}, \\
-        Q_{D}^{(i)'} & =  p\bar{Q}^{(i)} + \bar{c}^{(i)}. \\
-    \end{align*}
 \end{lemma}
-
-\begin{proof}
-    The best response of a memory one strategy against a group of memory one
-    strategies can captured by a candidate set of behaviours. This candidate set
-    is constructed by considering behaviours where any or all of \(p_1, p_2,
-    p_3, p_4\) are \(\in \{0, 1\}\) and the rest or all of \(p_1, p_2, p_3,
-    p_4\) are given by roots of the partial derivatives.
-    
-    Note that for \(p_i \in
-    \{0, 1\}\) we consider the roots of the partial derivatives for \(p_j \neq
-    p_i\) for \(i,j \in [1, 4]\). The derivatives, \(\frac{d\sum u}{dp}\), are
-    given by,
-
-    {\scriptsize
-    \begin{align}\label{eq:mo_tournament_derivative}
-        \frac{d}{dp} \sum\limits_{i=1} ^ {N} {u_q}^{(i)} (p) & = \nonumber \\
-        & =\frac{
-        (\sum\limits_{i=1} ^ {N} Q_{N}^{(i)'} \prod_{\substack{j=1 \\ j \neq i}} ^ N Q_{D}^{(i)}
-        + \sum\limits_{i=1} ^ {N} Q_{D}^{(i)'} \sum_{\substack{j=1 \\ j \neq i}} ^ {N} Q_{N}^{(i)}
-       \prod_{\substack{j=1 \\ j \neq \{i, j\}}} ^ N Q_{D}^{(i)}) \times
-       \prod\limits_{i=1} ^ N Q_{D}^{(i)} - (\sum\limits_{i=1} ^ {N} Q_{D}^{(i)'}y-vk
-       \prod_{\substack{j=1 \\ j \neq i}} ^ N Q_{D}^{(i)}) \times
-       (\sum\limits_{i=1} ^ {N} Q_{N}^{(i)} \prod_{\substack{j=1 \\ j \neq i}} ^ N Q_{D}^{(i)})}
-        {(\prod\limits_{i=1} ^ N Q_{D}^{(i)})^{2}}
-    \end{align}
-    }
-
-    For equation~\ref{eq:mo_tournament_derivative} to be zero, the numerator
-    must fall to zero and the denominator can not nullified. One the candidate
-    set is constructed each point is evaluated using equation
-    (\ref{eq:tournament_utility}). The point with the maximum utility is
-    selected.
-\end{proof}
-
-A special case of Lemma~\ref{lemma:memone_group_best_response} is for \(N=1\),
-thus when a strategy plays against a single opponent. In this case the formulation
-of Theorem~\ref{theorem:quadratic_form_u} is used and the best response is captured
-by Lemma~\ref{lemma:memone_best_response}.
-
-% TODO I wonder if moving this long list of specific results to an appendix
-% would help focus the paper. (They could be an entire separate chapter in your
-% thesis).
-\begin{lemma}\label{lemma:memone_best_response}
-    The optimal behaviour of a memory one strategy player \(p^* \in \R_{[0, 1]} ^ 4\)
-    against a given opponent \(q \in \R_{[0, 1]} ^ 4\) is given by:
-
-    \[p^* = \textnormal{argmax}(u_q(p)), \ p \in S_q,\]
-
-    where the set \(S_q\) is defined as
-
-    \[S_q = \{0, \bar{p}_i, 1 \}^4 \text{ for } i \in \R,\]
-
-    where any \(\bar{p}\) satisfy conditions:
-
-    {\small
-    \begin{equation}\label{eq:derivative_numerator_condition}
-        (\bar{p}Q + c) ( \frac{1}{2} \bar{p}  \bar{Q}  \bar{p}^T + \bar{c}  \bar{p} + \bar{a})
-        - (\bar{p}\bar{Q} + \bar{c})( \frac{1}{2} \bar{p}  Q  \bar{p}^T + c \bar{p} + a) = 0
-    \end{equation}}
-
-    and
-
-    {\small
-    \begin{equation}\label{eq:derivative_denominator_condition}
-        \frac{1}{2} \bar{p}  \bar{Q}  \bar{p}^T + \bar{c}  \bar{p} + \bar{a} \neq 0
-    \end{equation}}
-\end{lemma}
-
-\begin{proof} The best response of a memory one strategy against another memory
-    one strategy can captured by a candidate set of behaviours. This candidate
-    set is constructed by considering behaviours where any or all of \(p_1, p_2,
-    p_3, p_4\) are \(\in \{0, 1\}\) and the rest or all of \(p_1, p_2, p_3,
-    p_4\) are given by roots of the partial derivatives.
-
-    Note that for \(p_i \in \{0, 1\}\) we consider the roots of the partial
-    derivatives for \(p_j \neq p_i\) for \(i,j \in [1, 4]\). The derivatives,
-    \(\frac{du}{dp}\), are given by,
-
-    \begin{equation}\label{eq:mo_derivative}
-        \frac{du_q (p)}{dp}  = \frac{(pQ + c) ( \frac{1}{2} p  \bar{Q}  p^T + \bar{c}  p + \bar{a})
-        - (p\bar{Q} + \bar{c})( \frac{1}{2} p  Q  p^T + c p + a)}
-          {( \frac{1}{2} p  \bar{Q}  p^T + \bar{c}  p + \bar{a})^2} \\
-    \end{equation}
-
-    For equation~\ref{eq:mo_tournament_derivative} to be zero, the numerator must fall
-    to zero and the denominator can not be zero.
-\end{proof}
 
 Equation (\ref{eq:derivative_numerator_condition}) is systems of at most \(4\)
 polynomials and the degree of the polynomials is gradually increasing every time
@@ -590,65 +441,6 @@ environments where cooperation can not occur, Lemma~\ref{lemma:stability_of_defe
     \(\sum_{i=1} ^ N (c^{(i)T} \bar{a}^{(i)} - \bar{c}^{(i)T} a^{(i)}) \leq 0\).
 \end{proof}
 
-A further constrained version of Lemma~\ref{lemma:stability_of_defection}, is
-for single interactions while the opponent is a reactive player. Defection is
-known to be stable in such interactions by the condition given in
-Lemma~\ref{lemma:stability_of_defection_reactive}.
-
-\begin{lemma}\label{lemma:stability_of_defection_reactive}
-    Defection is the best responses of a memory one player \(p\) against a reactive
-    player \(q\) if the transition probabilities of the opponent satisfy the
-    condition:
-    
-    \begin{equation}
-        4 q_{1} - 5 q_{2} - 1 > 0
-    \end{equation}
-    \end{lemma}
-
-\begin{proof}
-Initially, consider equation~(\ref{eq:mo_derivative}) for \(p = (0, 0, 0,
-0)\),
-
-\begin{equation}\label{eq:derivative_of_quadratic_zero}
-    \begin{aligned}
-     \frac{du}{dp_{| p=(0, 0, 0, 0)}} & = && \frac{c \bar{a} - \bar{c}a}
-      {\bar{a}^2} .\\
-    \end{aligned}
-\end{equation}
-
-The numerator \(\bar{c}a - c\bar{a}\) is given by,
-
-\[\input{tex/defection_matrix.txt}\]
-
-and the denominator \(\bar{a} ^ 2 = (-q_2 + q_4 + 1) ^ 2\), which is always positive. In order
-for defection to be the best response the derivative must have a negative
-sign at the point \(p = (0, 0, 0, 0)\). That means that the utility is only
-decreasing after \(p = (0, 0, 0, 0)\).
-
-Because \(\bar{a} ^ 2\) is always positive the sign of the derivative is given by \(\bar{c}a - c\bar{a}\).
-More specifically from equations,
-
-\begin{equation}\label{eq:defection_condition_one}
-    \input{tex/defection_condition_one.txt}
-\end{equation}
-\begin{equation}\label{eq:defection_condition_two}
-    \input{tex/defection_condition_two.txt}
-\end{equation}
-
-Both signs of the partial derivatives must be negative in order for the overall
-function to be decreasing ensuring defection is a best response.
-The signs of equations (\ref{eq:defection_condition_one}) and (\ref{eq:defection_condition_two})
-vary. There are cases that they have the same sign and cases that they do not,
-
-Moreover lets us consider a constrained version of the problem once again. Lets us
-assume that in an pairwise interaction the opponent is a reactive player \(q=(q_1, q_2, q_1, q_2)\).
-By substituting \(q_3=q_1\) and \(q_4=q_2\) equations (\ref{eq:defection_condition_one})
-and (\ref{eq:defection_condition_two}) are now re written as follow,
-
-\[\left[\begin{matrix}- q_{2} \left(4 q_{1} - 5 q_{2} - 1\right)\\
-\left(q_{2} - 1\right) \left(4 q_{1} - 5 q_{2} - 1\right)\end{matrix}\right]\]
-
-\end{proof}
 
 \section{Numerical experiments and Results} \label{section:numerical_experiments}
 
